--- a/src/app/about-us/about-us.component.html
+++ b/src/app/about-us/about-us.component.html
@@ -1,3 +1,58 @@
+<header>
+  <div class="header_top" id="home">
+      <nav class="navbar navbar-expand-lg navbar-light">
+          <div class="logo text-left">
+              <h1>
+                  <a class="navbar-brand" routerLink="">
+                      <i class="fas fa-podcast"></i>Train Future</a>
+              </h1>
+          </div>
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                      <span class="navbar-toggler-icon">
+                        
+                      </span>
+  
+                  </button>
+  
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+              <ul class="navbar-nav m-lg-auto text-right">
+                  <li class="nav-item active">
+                      <a class="nav-link" routerLink="">Home
+                                  
+                              </a>
+                  </li>
+                  <li class="nav-item">
+                      <a class="nav-link" routerLink="/about">About</a>
+                  </li>
+                  <li class="nav-item">
+                      <a class="nav-link" routerLink="/track">Track</a>
+                  </li>
+                   <li class="nav-item dropdown">
+                      <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                Training
+                                 <i class="fas fa-angle-down"></i>
+                              </a>
+                      <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                          <a class="dropdown-item" href="project.html">Your Tasks</a>
+                          <a class="dropdown-item" href="error.html" title="">Your DashBoard</a>
+  
+  
+                      </div>
+                  </li>
+                  <li class="nav-item">
+                      <a class="nav-link" routerLink="/contact">Contact</a>
+                  </li>
+  
+              </ul>
+              <form action="#" method="post" class="form-inline my-2 my-lg-0 search">
+                  <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Login</button>
+              </form>
+          </div>
+  
+      </nav>
+  
+  </div>
+  </header>
 <div class="about-section">
     <h1>About Us Page</h1>
     <p style="color: aliceblue;">We are providing a platform to train employees to build a better future, We give a training which fits the work enviorment of an Organization. </p>
@@ -46,3 +101,140 @@
       </div>
     </div>
   </div>
+  <footer>
+    <div class="container">
+        <div class="row footer-top-w3layouts">
+            <div class="col-lg-3 footer-grid-w3ls" data-aos="zoom-in">
+                <div class="footer-title">
+                    <h2>About Us</h2>
+                </div>
+                <div class="footer-text">
+                    <p>We are one of the leading training provider in computer science field to build the future of India.</p>
+    
+                </div>
+            </div>
+            <div class="col-lg-3 footer-grid-w3ls" data-aos="zoom-in">
+                <div class="footer-title">
+                    <h3>Contact Us</h3>
+                </div>
+                <div class="footer-office-hour">
+                    <ul>
+                        <li class="hd">Address :</li>
+                        <li>Train Future 18 Dallas Street Goa,India</li>
+    
+                    </ul>
+                    <ul>
+                        <li class="hd">Phone:+91 9140824647</li>
+                        <li class="hd">Email:
+                            <a href="mailto:info@example.com">jhansiabhishek@gmail.com</a>
+                        </li>
+                        
+                    </ul>
+                </div>
+            </div>
+            <div class="col-lg-3 footer-grid-w3ls" data-aos="zoom-in">
+                <div class="footer-title">
+                    <h3>Our Trainings</h3>
+                </div>
+                <div class="footer-list">
+                    <div class="flickr-grid">
+                
+                            <img src="assets/images/g1.png" class="img-fluid" alt=" ">
+                        
+                    </div>
+                    <div class="flickr-grid">
+                        
+                            <img src="assets/images/g2.png" class="img-fluid" alt=" ">
+                    
+                    </div>
+                    <div class="flickr-grid">
+                        
+                            <img src="assets/images/g3.png" class="img-fluid" alt=" ">
+                        
+                    </div>
+                    <div class="flickr-grid">
+                        
+                            <img src="assets/images/g4.png" class="img-fluid" alt=" ">
+                        
+                    </div>
+                    <div class="flickr-grid">
+                        
+                            <img src="assets/images/g9.jpg" class="img-fluid" alt=" ">
+                    
+                    </div>
+                    <div class="flickr-grid">
+                        
+                            <img src="assets/images/g5.jpg" class="img-fluid" alt=" ">
+                    
+                    </div>
+                    <div class="flickr-grid">
+                        
+                            <img src="assets/images/g6.png" class="img-fluid" alt=" ">
+                        
+                    </div>
+                    <div class="flickr-grid">
+                        
+                            <img src="assets/images/g7.jpg" class="img-fluid" alt=" ">
+                        
+                    </div>
+                    <div class="flickr-grid">
+                    
+                            <img src="assets/images/g8.jpg" class="img-fluid" alt=" ">
+                        
+                    </div>
+                    <div class="clearfix"></div>
+                </div>
+            </div>
+            <div class="col-lg-3 footer-grid-w3ls" data-aos="zoom-in">
+                <div class="footer-title">
+                    <h3>Subscribe</h3>
+                </div>
+                <p>Suscribe to get daily feedback of our trainings</p>
+                <form action="#" method="post" class="newsletter">
+                    <input class="email" type="email" placeholder="Your email..." required="">
+                    <button class="btn1">
+                        <i class="far fa-envelope"></i>
+                    </button>
+                </form>
+                <div class="clearfix"></div>
+            </div>
+    
+        </div>
+    
+    </div>
+    </footer>
+    <!---->
+    <div class="copyright">
+    <div class="container">
+        <div class="copyrighttop" data-aos="fade-left">
+            <ul>
+                <li>
+                    <h4>Follow us on:</h4>
+                </li>
+                <li>
+                    <a class="facebook" href="#">
+                        <i class="fab fa-facebook-f"></i>
+                    </a>
+                </li>
+                <li>
+                    <a class="facebook" href="#">
+                        <i class="fab fa-twitter"></i>
+                    </a>
+                </li>
+                <li>
+                    <a class="facebook" href="#">
+                        <i class="fab fa-google-plus-g"></i>
+                    </a>
+                </li>
+                <li>
+                    <a class="facebook" href="#">
+                        <i class="fab fa-pinterest-p"></i>
+                    </a>
+                </li>
+            </ul>
+        </div>
+        
+        <div class="clearfix"></div>
+    </div>
+    </div>
+    
