--- a/src/app/contact-us/contact-us.component.html
+++ b/src/app/contact-us/contact-us.component.html
@@ -1,3 +1,4 @@
+<app-header></app-header>
 <section class="services">
     <div class="container">
         <h3 class="tittle">Contact Us</h3>
@@ -69,3 +70,4 @@
         </div>
     </div>
 </section>
+<app-footer></app-footer>
