--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,3 +1,4 @@
+<app-header></app-header>
 <div>
 
 <!--/banner-->
@@ -323,3 +324,4 @@
 </section>
 <!---->
 <!--footer-->
+<app-footer></app-footer>
